# streambit

./: .gitignore  Cargo.toml  LICENSE  README.md  REMAINING_WORK.md  TESTING.md  TESTING_AR.md  USAGE.md  benchmark_compare.ps1
benchmarks/: download_dataset.py
dashboard/: .gitkeep
doc/: PROJECT_METADATA.md
doc/Implementation/: IMPLEMENTATION_PLAN.md
doc/task/: TASKS.md
streambit-audio/: Cargo.toml  README.md
streambit-audio/examples/: basic_test.rs
streambit-audio/src/: batch.rs  features.rs  lib.rs  loader.rs  processor.rs
streambit-cli/: Cargo.toml  README.md
streambit-cli/src/: main.rs  main_audio_summary.rs
streambit-core/: Cargo.toml
streambit-core/src/: .gitkeep  error.rs  lib.rs  parallel.rs  tensor.rs
streambit-vision/: Cargo.toml
streambit-vision/examples/: README.md  image_processing_demo.rs
streambit-vision/src/: .gitkeep  batch_ops.rs  enhancements.rs  filters.rs  image_proc.rs  lib.rs
streambit-web-ui/: Cargo.toml  README_AR.md  benchmark_python.py  download_audio_dataset.py  download_dataset.py
streambit-web-ui/src/: main.rs
streambit-web-ui/static/: index.html  index_new.html
streambit-web-ui/static/js/: audio.js  common.js
