[workspace]
resolver = "2"
members = [
    "streambit-core",
    "streambit-vision",
    "streambit-audio",
    "streambit-text",
    "streambit-tabular",
    "streambit-streaming",
    "streambit-cli",
    "streambit-python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mohamed ALarade <m.alarade@dpro.at>"]
license = "MIT"
repository = "https://github.com/Dpro-at/StreamBit.git"
homepage = "https://github.com/Dpro-at/StreamBit"
rust-version = "1.70"
keywords = ["ai", "ml", "data-loading", "pytorch", "tensorflow"]
categories = ["multimedia", "science", "data-structures"]

[workspace.dependencies]
# Core utilities
rayon = "1.8"
ndarray = "0.15"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# Vision
image = "0.25"
ffmpeg-next = "7.0"

# Audio
symphonia = { version = "0.5", features = ["all"] }
rustfft = "6.1"

# Text
pdf-extract = "0.7"
docx-rs = "0.4"
regex = "1.10"
memmap2 = "0.9"
encoding_rs = "0.8"

# Tabular
polars = { version = "0.36", features = ["lazy", "parquet", "csv"] }

# Streaming
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["stream", "blocking"] }
futures = "0.3"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"

# CLI
indicatif = "0.17"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
comfy-table = "7.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
