[package]
name = "streambit-vision"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance image and video processing for StreamBit"
keywords = ["image", "video", "computer-vision", "ml", "ai"]

[dependencies]
streambit-core = { path = "../streambit-core" }
image = "0.25"
rayon = "1.8"
ndarray = "0.15"
imageproc = "0.24"
log = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }

[[example]]
name = "image_processing_demo"
path = "examples/image_processing_demo.rs"

