[package]
name = "streambit-web-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Web UI for StreamBit image processing"

[dependencies]
streambit-vision = { path = "../streambit-vision" }
streambit-core = { path = "../streambit-core" }
actix-web = "4.4"
actix-files = "0.6"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true }
futures-util = "0.3"
base64 = "0.21"
image = { workspace = true }

[[bin]]
name = "streambit-ui"
path = "src/main.rs"
